@@ -153,6 +153,8 @@ $digitTransformTable = array(
 	',' => '٬', # &#x066c;
 );
 
+$fallback8bitEncoding = 'windows-1256';
+
 $rtl = true;
 $defaultUserOptionOverrides = array(
 	# Swap sidebar to right side by default
